--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,7 @@
 				<div id="container">
 					<h1><a href="https://github.com/amp99aero/stacker-game" style="color:blue; text-decoration: underline;">Stacker Game</a></h1>
 					<video controls width="500">
-						<source src="resource/stacker-game.ogg">
+						<source src="resource/stacker-game.mp4">
 					</video>
 
 				</div>
