--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,7 @@
 				<div id="container">
 					<h1><a href="https://github.com/amp99aero/stacker-game" style="color:blue; text-decoration: underline;">Stacker Game</a></h1>
 					<video controls width="500">
-						<source src="resource/stacker-game.mp4">
+						<source src="https://github.com/amp99aero/amp99aero.github.io/raw/main/resource/stacker-game.mp4" type="video/mp4">
 					</video>
 
 				</div>
