--- a/portfolio.html
+++ b/portfolio.html
@@ -41,9 +41,7 @@
 			<div id="main">
 				<div id="container">
 					<h1><a href="https://github.com/amp99aero/stacker-game" style="color:blue; text-decoration: underline;">Stacker Game</a></h1>
-					<video controls width="500">
-						<source src="https://github.com/amp99aero/amp99aero.github.io/raw/main/resource/stacker-game.mp4" type="video/mp4">
-					</video>
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/QMgkE9wcXHk?si=Wx6F1ww20SVa4gr5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 				</div>
 				<div id="widget-area">
