--- a/resume.html
+++ b/resume.html
@@ -17,10 +17,10 @@
 								<a href="index.html">Home</a>
 							</li>
 							<li>
-								<a href="webgl/webgl.html">WebGL</a>
+								<a href="wip.html">WebGL</a>
 							</li>
 							<li>
-								<a href="tutorials.html">Tutorials</a>
+								<a href="wip.html">Tutorials</a>
 								<ul class="submenu">
 									<li>Hello</li>
 								</ul>
